--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^7.0.0",
+    "@ethersproject/providers": "^5.7.2",
+    "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,11 +13,25 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "@venly/web3-provider": "^0.33.0",
+    "@walletconnect/web3-provider": "^1.8.0",
+    "assert": "^2.0.0",
+    "eth-chains": "^1.0.0",
+    "https-browserify": "^1.0.0",
+    "lodash": "^4.17.21",
+    "os-browserify": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "styled-components": "^5.3.6",
     "typescript": "^4.9.3",
-    "web-vitals": "^2.1.4"
+    "url": "^0.11.0",
+    "util": "^0.12.5",
+    "web-vitals": "^2.1.4",
+    "web3modal": "^1.9.10"
   },
   "scripts": {
     "start": "craco start",
@@ -42,6 +58,8 @@
     ]
   },
   "devDependencies": {
-    "@craco/types": "^7.0.0"
+    "@craco/types": "^7.0.0",
+    "@types/lodash": "^4.14.190",
+    "buffer": "^6.0.3"
   }
 }
