--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^7.0.0",
+    "@ethersproject/contracts": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
     "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -18,6 +19,7 @@
     "assert": "^2.0.0",
     "crypto-browserify": "^3.12.0",
     "eth-chains": "^1.0.0",
+    "ethers": "^5.7.2",
     "https-browserify": "^1.0.0",
     "lodash": "^4.17.21",
     "os-browserify": "^0.3.0",
@@ -39,7 +41,8 @@
     "start": "craco --max_old_space_size=4096 start ",
     "build": "craco --max_old_space_size=4096 build",
     "test": "craco test",
-    "eject": "craco eject"
+    "eject": "craco eject",
+    "typechain": "typechain --target ethers-v5 --out-dir src/config/contract/types \"./src/config/contract/abi.json\""
   },
   "eslintConfig": {
     "extends": [
@@ -61,7 +64,9 @@
   },
   "devDependencies": {
     "@craco/types": "^7.0.0",
+    "@typechain/ethers-v5": "^10.1.1",
     "@types/lodash": "^4.14.190",
-    "buffer": "^6.0.3"
+    "buffer": "^6.0.3",
+    "typechain": "^8.1.1"
   }
 }
