--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "url": "^0.11.0",
     "util": "^0.12.5",
     "web-vitals": "^2.1.4",
+    "web3": "^1.8.1",
+    "web3-core-helpers": "^1.8.1",
     "web3modal": "^1.9.10"
   },
   "scripts": {
