--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "@venly/connect": "^1.39.0",
     "@venly/web3-provider": "^0.33.0",
     "@walletconnect/web3-provider": "^1.8.0",
     "assert": "^2.0.0",
