--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "build": "craco --max_old_space_size=4096 build",
     "test": "craco test",
     "eject": "craco eject",
-    "typechain": "typechain --target ethers-v5 --out-dir src/config/contract/types \"./src/config/contract/abi.json\""
+    "typechain": "typechain --target ethers-v5 --out-dir src/config/contract/types \"./src/config/contract/abi/*.json\""
   },
   "eslintConfig": {
     "extends": [
