--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "https-browserify": "^1.0.0",
     "lodash": "^4.17.21",
     "os-browserify": "^0.3.0",
+    "re-reselect": "^4.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-lazy-ssr": "^0.2.4",
