--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "os-browserify": "^0.3.0",
     "re-reselect": "^4.0.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-lazy-ssr": "^0.2.4",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
